--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,13 @@
 	<version>2.2.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>retest model</name>
-	<description>The model of both retest and recheck</description>
+	<name>retest - model</name>
+	<description>The model of both retest and recheck.</description>
 
 	<licenses>
 		<license>
-			<name>GNU Affero General Public License</name>
-			<url>http://www.gnu.org/licenses/agpl-3.0.de.html</url>
+			<name>GNU Affero General Public License (AGPL), Version 3</name>
+			<url>https://gnu.org/licenses/agpl-3.0.html</url>
 		</license>
 	</licenses>
 
