--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>de.retest</groupId>
 	<artifactId>retest-model</artifactId>
-	<version>2.3.0</version>
+	<version>2.4.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>retest - model</name>
@@ -28,7 +28,7 @@
 		<url>https://github.com/retest/retest-model</url>
 		<connection>scm:git:https://github.com/retest/retest-model.git</connection>
 		<developerConnection>scm:git:https://github.com/retest/retest-model.git</developerConnection>
-		<tag>v2.3.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<dependencies>
