--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
 	</properties>
 
 	<scm>
-		<url>https://github.com/retest/retest-model</url>
+		<url>https://github.com/retest/retest-model/</url>
 		<connection>scm:git:https://github.com/retest/retest-model.git</connection>
 		<developerConnection>scm:git:https://github.com/retest/retest-model.git</developerConnection>
 		<tag>HEAD</tag>
