--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>de.retest</groupId>
 	<artifactId>retest-model</artifactId>
-	<version>2.4.0-SNAPSHOT</version>
+	<version>2.4.0</version>
 	<packaging>jar</packaging>
 
 	<name>retest - model</name>
@@ -59,7 +57,7 @@
 		<url>https://github.com/retest/retest-model/</url>
 		<connection>scm:git:git@github.com:retest/retest-model.git</connection>
 		<developerConnection>scm:git:git@github.com:retest/retest-model.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>v2.4.0</tag>
 	</scm>
 
 	<distributionManagement>
