--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,10 @@ before_script:
   - openssl aes-256-cbc -K $encrypted_d63810f507a9_key -iv $encrypted_d63810f507a9_iv
       -in retest-gmbh-gpg.asc.enc -out retest-gmbh-gpg.asc -d
   - gpg --fast-import retest-gmbh-gpg.asc
+  - cp .travis.settings.xml "${HOME}/.m2/settings.xml"
 
-before_deploy: mvn package -DskipTests --settings .travis.settings.xml
+before_deploy:
+  - mvn package -DskipTests
 
 deploy:
   provider: releases
