--- a/pom.xml
+++ b/pom.xml
@@ -234,9 +234,9 @@
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
-								<phase>verify</phase>
+								<phase>deploy</phase>
 								<goals>
-									<goal>sign</goal>
+									<goal>sign-and-deploy-file</goal>
 								</goals>
 							</execution>
 						</executions>
