Move under Eclipse to group IDE-specific settings
And end line with a dot like "Eclipse.", "Maven.", ...

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,12 @@
 .classpath
 .project
 
+# IntelliJ.
+.idea/
+*.iml
+
 # Maven.
 /target/
 
 # Artifact from signing JARs.
 retest-gmbh-gpg.asc
-
-# IntelliJ
-.idea/
-*.iml
