Enable SonarCloud analysis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
 language: java
 sudo: false
 
+addons:
+  sonarcloud:
+    organization: retest
+    token:
+      secure: "${SONAR_CLOUD_TOKEN}"
+
 notifications:
   email: false
 
 cache:
   directories:
+    - "${HOME}/.sonar/cache/"
     - "${HOME}/.m2/"
 
 install: true
@@ -13,6 +20,9 @@ install: true
 before_script:
   # copy Maven settings
   - cp .travis.settings.xml "${HOME}/.m2/settings.xml"
+
+script:
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent verify sonar:sonar
 
 before_deploy:
   # decrypt ReTest secret key
