Properly deploy signed artifacts

--- a/pom.xml
+++ b/pom.xml
@@ -206,13 +206,7 @@
 
 	<profiles>
 		<profile>
-			<id>release-signed-artifacts</id>
-			<activation>
-				<property>
-					<name>performRelease</name>
-					<value>true</value>
-				</property>
-			</activation>
+			<id>sign</id>
 			<build>
 				<plugins>
 					<plugin>
@@ -221,7 +215,6 @@
 						<version>1.6</version>
 						<configuration>
 							<skip>${gpg.skip}</skip>
-							<keyname>0x99045A9A</keyname>
 							<passphrase>${env.GPG_PASSPHRASE}</passphrase>
 						</configuration>
 						<executions>
