--- a/pom.xml
+++ b/pom.xml
@@ -103,11 +103,10 @@
 			<version>1.7.25</version>
 		</dependency>
 
-		<!-- version 2.6+ isn't Java 6 compatible -->
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>org.eclipse.persistence.moxy</artifactId>
-			<version>2.7.3</version>
+				<version>2.5.2</version><!-- moving to 2.6.0 breaks the XmlValue annotation -->
 		</dependency>
 
 		<!-- test dependencies -->
