--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 sudo: false
 
 env:
-  - MVN="mvn --settings $TRAVIS_BUILD_DIR/.travis.settings.xml"
+  - MVN="mvn --settings ${TRAVIS_BUILD_DIR}/.travis.settings.xml"
 
 addons:
   sonarcloud:
@@ -25,18 +25,16 @@ script:
 
 before_deploy:
   # decrypt ReTest secret key
-  - openssl aes-256-cbc -K $encrypted_d63810f507a9_key -iv $encrypted_d63810f507a9_iv
+  - openssl aes-256-cbc -K "${encrypted_5faff216b858_key}" -iv "${encrypted_5faff216b858_iv}"
       -in retest-gmbh-gpg.asc.enc -out retest-gmbh-gpg.asc -d
   # import decrypted ReTest secret key
   - gpg --fast-import retest-gmbh-gpg.asc
-  # package, sign and deploy artifacts
-  - ${MVN} deploy -DskipTests -P sign
+  # package and sign artifacts
+  - ${MVN} verify -DskipTests -Psign
 
 deploy:
-  provider: releases
-  api_key: "${GH_TOKEN}"
-  file_glob: true
-  file: "./target/retest-model-*.jar.*"
-  skip_cleanup: true
-  on:
-    tags: true
+  # deploy artifacts to Maven Central
+  - provider: script
+    script: ${MVN} deploy -DskipTests -Psign
+    on:
+      tags: true
