--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>de.retest</groupId>
 	<artifactId>retest-model</artifactId>
-	<version>6.0.0</version>
+	<version>6.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>retest - model</name>
@@ -70,7 +70,7 @@
 		<url>https://github.com/retest/retest-model/</url>
 		<connection>scm:git:git@github.com:retest/retest-model.git</connection>
 		<developerConnection>scm:git:git@github.com:retest/retest-model.git</developerConnection>
-		<tag>v6.0.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<distributionManagement>
